--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # 파일 제외 (파일명.확장자)
 
 # 현재 경로에 있는 파일만 제외 (다른 경로의 동일한 파일명은 추적)
-/node_modules
-/dist
+node_modules
+dist/*
+*.log
 # 특정 경로안의 특정 파일 제외
 
 # 특정 폴더안의 파일 전부 제외
