--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
-module.exports = {
+{
     "env": {
-        "browser": true,
+        "node": true,
+        "commonjs": true,
         "es2021": true
     },
     "extends": [
@@ -9,12 +10,10 @@ module.exports = {
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 13,
-        "sourceType": "module"
+        "ecmaVersion": 13
     },
     "plugins": [
         "@typescript-eslint"
     ],
-    "rules": {
-    }
-};
+    "rules": {}
+}
