--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "css-loader": "^6.5.1",
     "csv-loader": "^3.0.3",
     "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
@@ -39,6 +41,7 @@
     "jest": "^27.4.3",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^7.0.0",
+    "prettier": "^2.5.1",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "ts-jest": "^27.1.0",
@@ -53,5 +56,6 @@
   },
   "dependencies": {
     "lodash": "^4.17.21"
-  }
+  },
+  "type": "commonjs"
 }
