--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "npx jest",
     "start": "webpack serve --open",
     "watch": "webpack --watch",
-    "build": "webpack",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "bundle": "NODE_ENV=development webpack",
     "server": "node server.js"
   },
   "repository": {
@@ -29,16 +31,27 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.0.0",
     "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.2.0",
     "csv-loader": "^3.0.3",
     "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-webpack-plugin": "^3.1.1",
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
+    "image-minimizer-webpack-plugin": "^3.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "imagemin-svgo": "^10.0.0",
     "jest": "^27.4.3",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^7.0.0",
+    "prettier": "^2.5.1",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "ts-jest": "^27.1.0",
@@ -53,5 +66,6 @@
   },
   "dependencies": {
     "lodash": "^4.17.21"
-  }
+  },
+  "type": "commonjs"
 }
