--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "style-loader": "^3.3.1",
     "ts-jest": "^27.1.0",
     "ts-loader": "^9.2.6",
+    "tslint": "^6.1.3",
     "typescript": "^4.5.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.65.0",
@@ -52,6 +53,7 @@
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "tslint-config-airbnb": "^5.11.2"
   }
 }
