--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend_kakaopage",
+  "name": "frontend_kakaopay",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,6 @@
     "watch": "webpack --watch",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "bundle": "NODE_ENV=development webpack",
     "server": "node server.js"
   },
   "repository": {
@@ -31,9 +30,8 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.0.0",
     "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.2.0",
+    "css-minimizer-webpack-plugin": "^3.3.1",
     "csv-loader": "^3.0.3",
-    "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-webpack-plugin": "^3.1.1",
@@ -56,7 +54,6 @@
     "style-loader": "^3.3.1",
     "ts-jest": "^27.1.0",
     "ts-loader": "^9.2.6",
-    "tslint": "^6.1.3",
     "typescript": "^4.5.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.65.0",
@@ -66,14 +63,7 @@
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
-<<<<<<< HEAD
-    "lodash": "^4.17.21",
-    "tslint-config-airbnb": "^5.11.2"
-  }
-}
-=======
     "lodash": "^4.17.21"
   },
   "type": "commonjs"
 }
->>>>>>> 3e4e5795642facfba9d2c01d3438d9d26d7bca85
