--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,8 @@
 {
     "env": {
         "node": true,
-        "commonjs": true,
-        "es2021": true
+        "browser": true,
+        "es2020": true
     },
     "extends": [
         "eslint:recommended",
@@ -10,12 +10,13 @@
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 2021
+        "ecmaVersion": 11
     },
     "plugins": [
         "@typescript-eslint"
     ],
     "rules": {
-        "endOfLine": "auto"
+        "endOfLine": 0,
+        "@typescript-eslint/no-var-requires": 0
     }
 }
