--- a/babel.config.json
+++ b/babel.config.json
@@ -1,9 +1,5 @@
 {
   "presets": [
-    "@babel/preset-env",
-    [
-      "env",{
-        "modules" : false
-    }]
+    "@babel/preset-env"
   ]
 }
