--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx jest",
+    "test": "jest --setupFiles dotenv/config --forceExit --detectOpenHandles",
     "start": "webpack serve --open",
     "watch": "webpack --watch",
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
+    "bundle": "NODE_ENV=development webpack",
     "server": "node server.js"
   },
   "repository": {
@@ -30,8 +31,9 @@
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.0.0",
     "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.3.1",
+    "css-minimizer-webpack-plugin": "^3.2.0",
     "csv-loader": "^3.0.3",
+    "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-webpack-plugin": "^3.1.1",
@@ -60,6 +62,7 @@
     "webpack-cli": "^4.9.1",
     "webpack-dev-middleware": "^5.2.2",
     "webpack-dev-server": "^4.6.0",
+    "webpack-manifest-plugin": "^4.0.2",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
