--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "test": "jest --setupFiles dotenv/config --forceExit --detectOpenHandles",
     "start": "webpack serve --open",
     "watch": "webpack --watch",
-    "dev": "webpack --mode development",
+    "dev": "webpack-dev-server --open",
     "build": "webpack --mode production",
-    "bundle": "NODE_ENV=development webpack",
     "server": "node server.js"
   },
   "repository": {
@@ -28,6 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "babel-loader": "^8.2.3",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.0.0",
     "css-loader": "^6.5.1",
@@ -40,6 +40,7 @@
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "html-loader": "^3.0.1",
+    "html-webpack-inline-source-plugin": "^0.0.10",
     "html-webpack-plugin": "^5.5.0",
     "image-minimizer-webpack-plugin": "^3.0.1",
     "imagemin-gifsicle": "^7.0.0",
