--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@babel/preset-env": "^7.16.4",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
+    "@webcomponents/webcomponentsjs": "^2.6.0",
     "babel-loader": "^8.2.3",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-custom-element-classes": "^0.1.0",
+    "babel-plugin-transform-es2015-classes": "^6.24.1",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.0.0",
     "css-loader": "^6.5.1",
@@ -49,13 +52,13 @@
     "imagemin-optipng": "^8.0.0",
     "imagemin-pngquant": "^9.0.2",
     "imagemin-svgo": "^10.0.0",
-    "jest": "^27.4.3",
+    "jest": "^27.4.7",
     "mini-css-extract-plugin": "^2.4.5",
     "node-sass": "^7.0.0",
     "prettier": "^2.5.1",
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
-    "ts-jest": "^27.1.0",
+    "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2",
     "url-loader": "^4.1.1",
@@ -67,7 +70,9 @@
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "@types/jest": "^27.4.0",
+    "lodash": "^4.17.21",
+    "supertest": "^6.2.1"
   },
   "type": "commonjs"
 }
